--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -40,7 +40,7 @@ locations-stopwords: # set of subjects separated by ; that will be removed from 
 # see _data/map-config.csv for field display options
 latitude: 53.472783 #to determine center of map
 longitude: -2.240045 #to determine center of map
-zoom-level: 1 # zoom level for map 
+zoom-level: 10 # high level is closer - zoom for map tab
 map-base: OpenStreetMap_Mapnik # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery, OpenStreetMap_Mapnik
 map-search: true # true/false, not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
